# sellermp

./: .env  .gitignore  .pre-commit-config.yaml  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
base/: urls.py
marketplace/: models.py  tests.py  urls.py  views.py
marketplace/templates/: marketplace-form.html  marketplace.html  settings-form.html
seller/: models.py  tests.py  urls.py  views.py
seller/migrations/: 0001_initial.py  0002_alter_seller_bank_name.py
seller/templates/: base.html  details-form.html  sellers-form.html  sellers.html
sellermp/: asgi.py  settings.py  urls.py  wsgi.py
